# CLI-Anything-Arcgis-Pro

./: README.md  ROADMAP.md  glama.json  pyproject.toml
cli_anything_arcgis_pro/: __main__.py  cmd_map.py
demos/: demo_live_workflow.ps1
live-bridge/: LICENSE  mcp_server.py
live-bridge/ProSimpleMapExport/: BridgeServer.cs
tests/: test_full_e2e.py  test_mcp_server.py
